# Luna-Gaida-discord-voice

./: .dockerignore  .env.example  .gitignore  Dockerfile  Models.js  README.md  compose.yml  package-lock.json  package.json  start-luna-desktop.bat  start-luna-monitor.bat  start-luna-watch.bat  start-luna.bat  test-whisper.bat  tsconfig.base.json
apps/data/: giada.sqlite  giada.sqlite-shm  giada.sqlite-wal
apps/desktop/: .env.example  avatar.html  index.html  package.json  vite.config.ts
apps/desktop/src/: avatar.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: avatar.json  main.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  security.rs
apps/server/: package.json  tsconfig.json
apps/server/drizzle/: 0000_platform.sql  0001_voice_changer_profiles.sql
apps/server/monitor/: monitor.css  monitor.html  monitor.js
apps/server/src/: discordShard.ts  index.ts
apps/server/tests/: conversationHistory.test.ts  conversationResearch.test.ts  conversationTopics.test.ts  fishAudioDelivery.test.ts  (+22 more)
apps/web/: index.html  package.json  vite.config.js  vite.config.ts
data/: giada.sqlite  giada.sqlite-shm  giada.sqlite-wal
deploy/searxng/: settings.yml
docs/: architecture.md  migration-from-oldCode.md  platform-limitations.md  plugin-guide.md  threat-model.md
scripts/: live_chat_service.py  local_voice_service.py  luna-avatar-window.bat  luna-backend-window.bat  luna-monitor.mjs  luna-watch.mjs  requirements-live-chat.txt  seed-luna-personality.mjs  start-luna.mjs  test_whisper.py
(+112 files in other folders)
