[package]
name = "giada-companion"
version = "0.1.0"
description = "Giada AI desktop companion"
authors = ["Giada Contributors"]
edition = "2021"

[lib]
name = "giada_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[dev-dependencies]
tempfile = "3"
